chore: fixes overflow notes

--- a/css/style.css
+++ b/css/style.css
@@ -706,12 +706,11 @@ img {
 
 .category-item-inner {
   min-height: 82px;
-  margin-top: 20px;
-  margin-left: 22px;
+  margin: 20px 0px 21px 22px;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: space-between;
+  gap: 14px;
   position: relative;
 }
 
@@ -728,6 +727,7 @@ img {
   font-size: 24px;
   line-height: 30px;
   font-weight: 700;
+  max-width: 135px;
 }
 
 .category-item a {
@@ -806,6 +806,7 @@ img {
 }
 
 .slider {
+  height: 100%;
   position: relative;
 }
 
@@ -813,7 +814,6 @@ img {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 122px;
   left: 24px;
   right: 20px;
   bottom: 104px;
@@ -841,7 +841,6 @@ img {
   display: flex;
   justify-content: space-between;
   position: absolute;
-  top: 220px;
   left: 295px;
   right: 295px;
   bottom: 36px;
@@ -852,6 +851,7 @@ img {
 }
 
 .slider-items {
+  height: 100%;
   list-style: none;
   padding: 0;
 }
@@ -885,7 +885,7 @@ img {
 
 .slider-item {
   width: 620px;
-  height: 266px;
+  height: 100%;
   background-size: cover;
 }
 
@@ -916,9 +916,7 @@ img {
 
 .catalog-button {
   position: absolute;
-  top: 201px;
   left: 24px;
-  right: 404px;
   bottom: 27px;
 }
 
@@ -1270,6 +1268,10 @@ img {
   background-position: right top;
 }
 
+.service-item p {
+  word-break: break-word;
+}
+
 .service-item:nth-child(1) {
   background-image: url(../img/delivery.png);
   background-size: 468px 261px;
@@ -1288,12 +1290,21 @@ img {
   background-size: 465px 285px;
 }
 
+.service-item:nth-child(1) p {
+  max-width: 300px;
+}
+
+.service-item:nth-child(2) p {
+  max-width: 331px;
+}
+
 .service-item:nth-child(2) h3 {
   margin-bottom: 24.5px;
 }
 
 .service-item:nth-child(3) p {
   margin-bottom: 26.5px;
+  max-width: 309px;
 }
 
 .service-item:nth-child(3) .button {
